objects/project_cloud__Total_Allocation__c.object
<CustomObject>
    <description>System object representing Total Allocations against a Project Task</description>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <description>The last end date for all the users allocations against this project task</description>
        <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hash__c</fullName>
        <description>Hash used by the triggers to identify each Total Allocation object</description>
        <formula>CASESAFEID(project_cloud__User__c) &amp; CASESAFEID(project_cloud__Project_Task__c)</formula>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the total number of hours a user has been allocated to a task</description>
        <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <description>Each User with allocations against a Project Task will have one total allocation object keeping a tally of the hours they have been allocated to the task</description>
        <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Total Allocations</relationshipLabel>
        <relationshipName>Total_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>project_cloud__Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the user have a subscription to the Project Task? The Subscribed Enum is then rolled up so a count of subscriptions exists on the Project Task</description>
        <label>Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who does this Total Allocation belong to?</description>
        <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Total_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Total Allocation</label>
    <nameField>
        <displayFormat>TA-{0000000000}</displayFormat>
        <label>Total Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>project_cloud__User_Is_Read_Only</fullName>
        <active>true</active>
        <description>Once set the user lookup is read only.</description>
        <errorConditionFormula>ISBLANK(project_cloud__User__c) || ISCHANGED(project_cloud__User__c)</errorConditionFormula>
        <errorDisplayField>project_cloud__User__c</errorDisplayField>
        <errorMessage>The User field is compulsory and once set read only</errorMessage>
    </validationRules>
</CustomObject>